# leomoon-textcounter

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
leomoon-textcounter/: __init__.py  expr_deps.py
src/: blender-text-counter.py  leomoon-textcounter.py
tests/: test_expr_eval.py  test_format_number.py  test_format_time.py
textcounter/: __init__.py  blender_manifest.toml
textcounter/core/: expr_eval.py  format_number.py  format_time.py  log.py  update.py
textcounter/handlers/: __init__.py  frame_change.py
textcounter/operators/: __init__.py  copy_paste.py  presets.py
textcounter/presets/: abbreviated_large.py  currency_eur.py  currency_usd.py  percentage.py  score_padded.py  stopwatch_mmss.py  timecode_hhmmssff.py
textcounter/properties/: __init__.py  counter_props.py
textcounter/ui/: __init__.py  panel_counter.py
